<resources>
    <string name="app_name">HomeWorkGridRecylcerView</string>
    <string name="vip">VIP</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="vip_activated">Vip Activated</string>
    <string name="add">Add</string>
    <string name="pls_fill_fields">Please fill all fields</string>
    <string name="sucess">Success</string>
    <string name="no_result">No Result</string>
</resources>